--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "It's a repository of retrospects",
   "main": "build.js",
+  "scripts":{
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
+  },
   "repository": "https://github.com/ju5tu5/retrospeculative.git",
   "author": "Justus Sturkenboom <justus@ju5tu5.nl>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "vuepress": "^0.7.1"
+  }
 }
