--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "It's a collection of retrospeculative science fiction gems become fact.",
   "main": "build.js",
   "scripts":{
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "dev": "vuepress dev src",
+    "build": "vuepress build src"
   },
   "repository": "https://github.com/ju5tu5/retrospeculative.git",
   "author": "ju5tu5 <justus@ju5tu5.nl>",
